# glmagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
.zscripts/: dev.sh
app/: __init__.py  main.py  pyproject.toml  requirements.txt
config/: Caddyfile  index.html
mini-services/: README.md
mini-services/.example/: package.json
mini-services/.example/src/: index.ts
scripts/: dev.sh  start.sh
skills/example-skill/: SKILL.md
tests/: test_engine.py
