[project]
name = "glm-agent-engine"
version = "2.0.0"
description = "GLM Agent Engine - AI Agent Runtime replicated from Z.ai Container"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core web framework
    "fastapi>=0.128.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.3",
    "sse-starlette>=3.2.0",
    "python-multipart>=0.0.21",

    # Data validation
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Caching
    "redis>=7.1.0",

    # Auth
    "PyJWT>=2.10.0",

    # Scheduling
    "apscheduler>=3.11.0",

    # Observability
    "ddtrace>=4.2.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-prometheus>=0.60b0",
    "prometheus-client>=0.24.0",
    "loguru>=0.7.3",

    # Serialization
    "orjson>=3.11.0",

    # Async
    "anyio>=4.12.0",
    "aiohttp>=3.13.0",
    "aiofiles>=24.1.0",

    # WebSocket
    "websockets>=16.0",

    # MCP
    "mcp>=1.25.0",
    "fastmcp>=2.14.0",

    # Browser automation
    "playwright>=1.57.0",

    # Document processing
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.26.0",
    "pypdf>=6.6.0",

    # Image processing
    "Pillow>=11.3.0",
    "opencv-python-headless>=4.13.0",

    # Web utilities
    "beautifulsoup4>=4.14.0",
    "markdownify>=1.2.0",
    "lxml>=6.0.0",
    "cssselect2>=0.8.0",

    # Configuration
    "python-dotenv>=1.2.0",

    # Cloud SDKs (optional, for production)
    "alibabacloud-fc20230330>=4.6.0",
    "alibabacloud-oss-v2>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
